@@ -1,0 +1,19 @@
+processor	: 0
+vendor_id	: AuthenticAMD
+cpu family	: 15
+model		: 12
+model name	: AMD Athlon(tm) 64 Processor 3200+
+stepping	: 0
+cpu MHz		: 2246.427
+cache size	: 512 KB
+fdiv_bug	: no
+hlt_bug		: no
+f00f_bug	: no
+coma_bug	: no
+fpu		: yes
+fpu_exception	: yes
+cpuid level	: 1
+wp		: yes
+flags		: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 syscall nx mmxext 3dnowext 3dnow up ts fid vid ttp
+bogomips	: 4506.97
+
