@@ -1,0 +1,32 @@
+cpuinfo cittagazze.cpuinfo
+majors 2.4 2.6
+flavour k7
+kernel-2.4 \
+  kernel-image-2.4-k7 \
+  kernel-image-2.4-k6 \
+  kernel-image-2.4-586tsc \
+  kernel-image-2.4-386
+kernel-2.6 \
+  linux-image-2.6-k7 \
+  linux-image-2.6-486 \
+  kernel-image-2.6-k7 \
+  kernel-image-2.6-386
+usable \
+  kernel-image-2.4-386 \
+  kernel-image-2.4-586tsc \
+  kernel-image-2.4-686 \
+  kernel-image-2.4-k6 \
+  kernel-image-2.4-k7 \
+  kernel-image-2.4.27-2-386 \
+  kernel-image-2.4.27-2-586tsc \
+  kernel-image-2.4.27-2-686 \
+  kernel-image-2.4.27-2-k6 \
+  kernel-image-2.4.27-2-k7 \
+  linux-image-2.6-386 \
+  linux-image-2.6-686 \
+  linux-image-2.6-k6 \
+  linux-image-2.6-k7 \
+  linux-image-2.6.16-1-386 \
+  linux-image-2.6.16-1-686 \
+  linux-image-2.6.16-1-k6 \
+  linux-image-2.6.16-1-k7 \
