@@ -6,6 +6,8 @@ base-installer (1.64) UNRELEASED; urgency=low
     the conf.d directory, rather than editing a conffile.
   * Separate resume configuration file handling from other ramdisk
     configuration file handling.
+  * AMD CPU family 15 systems (i.e. K8) should be allowed to install K7
+    kernels.
 
   [ Frans Pop ]
   * Use separate variable for selected ramdisk generator.
